<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="10"
    android:padding="10dp"
    android:background="@android:color/black"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/app_name"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/about_sherlock_titel"
            android:textColor="@android:color/primary_text_dark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingBottom="2dp"
            android:text="@string/about_sherlock_link"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/about_sherlock_licence"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/about_lazylist_titel"
            android:textColor="@android:color/primary_text_dark"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingBottom="2dp"
            android:text="@string/about_lazylist_link"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/about_lazylist_licence"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>